refactor: encode custom definitions per protocol